--- a/new.html
+++ b/new.html
@@ -21,10 +21,10 @@
     <script src="/assets/lib/jquery/jquery-2.1.1.min.js"></script>
     <script src="/assets/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="/assets/lib/leaflet/leaflet.js"></script>
-    <script src="/assets/common/langeland/statusBar.js"></script>
-    <script src="/assets/common/langeland/TemporalColor.js"></script>	
-    <script src="/assets/common/langeland/langeland.js"></script>
-    <script src="/assets/common/langeland/TimeModule.js"></script>
+    <script src="js/langeland/statusBar.js"></script>
+    <script src="js/langeland/TemporalColor.js"></script>	
+    <script src="js/langeland/langeland.js"></script>
+    <script src="js/langeland/TimeModule.js"></script>
     <script src="/assets/lib/jquery/jquery.easing.min.js"></script>
 
 
