--- a/admin2/index.html
+++ b/admin2/index.html
@@ -56,9 +56,9 @@
             <!-- /.navbar-header -->
 
            
-            <!-- /.navbar-top-links -->
-
-            <div class="navbar-default sidebar" role="navigation">
+             <!-- /.navbar-top-links -->
+ 
+		  	  <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
@@ -77,6 +77,9 @@
                         </li>
                         <li>
                             <a href="tables.html"><i class="fa fa-table fa-fw"></i> Raw data</a>
+                        </li>
+						<li>
+                            <a href="map.html"><i class="fa fa-table fa-fw"></i> Raw data</a>
                         </li>
                     </ul>
                 </div>
