--- a/admin2/map.html
+++ b/admin2/map.html
@@ -19,6 +19,10 @@
 
     <!-- DataTables CSS -->
     <link href="css/plugins/dataTables.bootstrap.css" rel="stylesheet">
+	
+	
+    <link href="/assets/lib/leaflet/leaflet.css" rel="stylesheet">
+
 
     <!-- Custom CSS -->
     <link href="css/sb-admin-2.css" rel="stylesheet">
@@ -114,6 +118,7 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="/assets/lib/leaflet/leaflet.min.js"></script>
 
     <!-- Metis Menu Plugin JavaScript -->
     <script src="js/plugins/metisMenu/metisMenu.min.js"></script>
