--- a/admin2/map.html
+++ b/admin2/map.html
@@ -118,7 +118,7 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-    <script src="/assets/lib/leaflet/leaflet.min.js"></script>
+    <script src="/assets/lib/leaflet/leaflet.js"></script>
 
     <!-- Metis Menu Plugin JavaScript -->
     <script src="js/plugins/metisMenu/metisMenu.min.js"></script>
