--- a/admin2/map.html
+++ b/admin2/map.html
@@ -150,6 +150,7 @@
 		var table = $("#resbody");
 		for (i=0; i<data.length; i++) {
 			L.geoJson(data[i][1]).addTo(map);
+			console.log(data[i]);
 		}
 
 	});
