--- a/admin2/map.html
+++ b/admin2/map.html
@@ -141,7 +141,7 @@
 		$("#map").css('height', $(window).height()-offsetTop);
 	}).resize();
 	
-	
+	var geojson;
 	var map = L.map('map').setView([61.3999272955946,5.76203078840252], 13);
 	
 	map.addLayer(L.tileLayer.wms("http://opencache.statkart.no/gatekeeper/gk/gk.open?",{layers: 'topo2graatone', format: 'image/png'},{attribution:''}));
@@ -150,6 +150,7 @@
 		var table = $("#resbody");
 		for (i=0; i<data.length; i++) {
 			console.log(data[i]);
+			geojson = L.geoJson(data[i][1]).addTo(map);
 		}
 
 	});
