--- a/admin2/map.html
+++ b/admin2/map.html
@@ -143,14 +143,22 @@
 	
 	var geojson;
 	var map = L.map('map').setView([61.3999272955946,5.76203078840252], 13);
-	
+	var emptyData;
 	map.addLayer(L.tileLayer.wms("http://opencache.statkart.no/gatekeeper/gk/gk.open?",{layers: 'topo2graatone', format: 'image/png'},{attribution:''}));
 
 	$.getJSON('/datapi/langeland/rawdatahours/', function (data) {
 		var table = $("#resbody");
+		var tempPoint;
 		for (i=0; i<data.length; i++) {
-			console.log(data[i]);
-			geojson = L.geoJson(JSON.parse(data[i][1])).addTo(map);
+			tempPoint = JSON.parse(data[i][1]);
+			console.log(tempPoint);
+			geojson = L.geoJson(tempPoint).addTo(map);
+			tempPoint.properties = {
+				'id' : data[i][1],
+				'insertedtime' : data[i][2];
+				'positiontime' : data[i][3];
+			}
+			}
 		}
 
 	});
