--- a/admin2/map.html
+++ b/admin2/map.html
@@ -155,8 +155,8 @@
 			geojson = L.geoJson(tempPoint).addTo(map);
 			tempPoint.properties = {
 				'id' : data[i][1],
-				'insertedtime' : data[i][2];
-				'positiontime' : data[i][3];
+				'insertedtime' : data[i][2],
+				'positiontime' : data[i][3]
 			}
 			console.log(tempPoint);
 			}
