--- a/admin2/map.html
+++ b/admin2/map.html
@@ -152,7 +152,7 @@
 		for (i=0; i<data.length; i++) {
 			tempPoint = JSON.parse(data[i][1]);
 			
-			if (typeof tempPoint === 'undefined') {
+			if (typeof tempPoint === 'undefined' || tempPoint == null) {
 				tempPoint = JSON.parse('"{"type":"Point","coordinates":[5.85,61.5,387.5]}"')
 			}
 			tempPoint.properties = {
