--- a/admin2/map.html
+++ b/admin2/map.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<html>
 
 <head>
 
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -155,11 +154,7 @@
 			if (typeof tempPoint === 'undefined' || tempPoint == null) {
 				tempPoint = JSON.parse('"{"type":"Point","coordinates":[5.85,61.5,387.5]}"');
 			}
-			tempPoint.properties = {
-				'id' : data[i][0],
-				'insertedtime' : data[i][2],
-				'positiontime' : data[i][3]
-			}
+		
 			geojson = L.geoJson(tempPoint).addTo(map);
 			console.log(tempPoint);
 			}
