--- a/admin2/map.html
+++ b/admin2/map.html
@@ -150,7 +150,7 @@
 		var tempPoint;
 		for (i=0; i<data.length; i++) {
 			tempPoint = JSON.parse(data[i][1]);
-			
+			console.log(data[i]);
 			if (typeof tempPoint === 'undefined' || tempPoint == null) {
 				tempPoint = JSON.parse('"{"type":"Point","coordinates":[5.85,61.5,387.5]}"');
 			}
