--- a/admin2/map.html
+++ b/admin2/map.html
@@ -152,9 +152,14 @@
 			try {
 				tempPoint = JSON.parse(data[i][1]);
 			} catch (error) {
+				console.log(error);
+				tempPoint = null;
+			}
+			
+			if (tempPoint == null) {
 				tempPoint = JSON.parse('"{"type":"Point","coordinates":[5.85,61.5,387.5]}"');
 			}
-		
+			
 		
 			geojson = L.geoJson(tempPoint).addTo(map);
 			console.log(tempPoint);
