--- a/admin2/map.html
+++ b/admin2/map.html
@@ -187,12 +187,14 @@
 	
 	
 	function getMarkerOptions(properties) {
-		radius: 8,
-		fillColor: "#ff7800",
-		color: "#000",
-		weight: 1,
-		opacity: 1,
-		fillOpacity: 0.8
+		return {
+			radius: 8,
+			fillColor: "#ff7800",
+			color: "#000",
+			weight: 1,
+			opacity: 1,
+			fillOpacity: 0.8
+		}
 	}
 	
 	
