--- a/admin2/map.html
+++ b/admin2/map.html
@@ -167,7 +167,8 @@
 					'positiontime' : data[i][3]
 				}
 				geojson = L.geoJson(tempPoint, {
-				 pointToLayer: function (feature, latlng) {
+					onEachFeature: onEachFeature,
+					 pointToLayer: function (feature, latlng) {
 				       return L.circleMarker(latlng, getMarkerOptions(tempPoint.properties));
 				  }}).addTo(map);
 				
@@ -197,7 +198,13 @@
 		}
 	}
 	
-	
+	function onEachFeature(feature, layer) {
+	    // does this feature have a property named popupContent?
+	    if (feature.properties && feature.properties.popupContent) {
+	        layer.bindPopup(feature.properties.popupContent);
+	    }
+	}
+
 	
 		
 	
