--- a/admin2/map.html
+++ b/admin2/map.html
@@ -199,6 +199,7 @@
 	}
 	
 	function onEachFeature(feature, layer) {
+		console.log(feature);
 	    // does this feature have a property named popupContent?
 	    if (feature.properties && feature.properties.popupContent) {
 	        layer.bindPopup(feature.properties.popupContent);
