--- a/admin2/map.html
+++ b/admin2/map.html
@@ -200,10 +200,9 @@
 	
 	function onEachFeature(feature, layer) {
 		console.log(feature);
-	    // does this feature have a property named popupContent?
-	    if (feature.properties) {
-	        layer.bindPopup(feature.properties);
-	    }
+		
+	        layer.bindPopup(feature.properties.insertedTime);
+	    
 	}
 
 	
