--- a/admin2/map.html
+++ b/admin2/map.html
@@ -201,7 +201,7 @@
 	function onEachFeature(feature, layer) {
 		console.log(feature);
 		
-	        layer.bindPopup(feature.properties.insertedTime);
+	        layer.bindPopup('test');
 	    
 	}
 
