--- a/admin2/map.html
+++ b/admin2/map.html
@@ -143,12 +143,14 @@
 	var geojson;
 	var map = L.map('map').setView([61.3999272955946,5.76203078840252], 13);
 	var emptyData;
+	var mostRecent;
 	map.addLayer(L.tileLayer.wms("http://opencache.statkart.no/gatekeeper/gk/gk.open?",{layers: 'topo2graatone', format: 'image/png'},{attribution:''}));
 
 	$.getJSON('/datapi/langeland/rawdatahours/', function (data) {
 		var table = $("#resbody");
 		var tempPoint;
 		for (i=0; i<data.length; i++) {
+			
 			tempPoint = null;
 			try {
 				tempPoint = JSON.parse(data[i][1]);
@@ -159,7 +161,9 @@
 			
 			if (tempPoint != null) {
 				
-			
+				if (mostRecent == null) {
+					mostRecent = properties.insertedtime;
+				}
 				console.log(tempPoint);
 				tempPoint.properties = {
 					'id' : data[i][0],
@@ -188,10 +192,14 @@
 	
 	
 	function getMarkerOptions(properties) {
+		console.log(properties.insertedtime);
+		var fillColor = '#ff7800';
+		var color = '#000';
+		console.log(mostRecent);
 		return {
 			radius: 8,
-			fillColor: "#ff7800",
-			color: "#000",
+			fillColor: fillColor,
+			color: color,
 			weight: 1,
 			opacity: 1,
 			fillOpacity: 0.8
@@ -199,9 +207,7 @@
 	}
 	
 	function onEachFeature(feature, layer) {
-		console.log(feature);
-		
-	        layer.bindPopup(feature.properties.id + '<br>Inserted: ' + feature.properties.insertedTime);
+	        layer.bindPopup(feature.properties.id + '<br>Inserted: ' + feature.properties.insertedtime);
 	    
 	}
 
