--- a/admin2/map.html
+++ b/admin2/map.html
@@ -194,6 +194,7 @@
 	
 	function getMarkerOptions(properties) {
 		console.log(properties.insertedtime);
+		console.log(convertTime(mostRecent) - convertTime(properties.insertedtime);
 		var fillColor = '#ff7800';
 		var color = '#000';
 		console.log(mostRecent);
@@ -213,6 +214,13 @@
 	}
 
 	
+	function convertTime(ts) {
+		var time = new Date(1970,01,01,0,0,0,0);
+		if (ts) {
+			time = new Date(ts.substr(0,4),ts.substr(5,2)-1,ts.substr(8,2),ts.substr(11,2),ts.substr(14,2),ts.substr(17,2),0);
+		}
+		return time;
+	}
 		
 	
 	
