--- a/admin2/map.html
+++ b/admin2/map.html
@@ -194,7 +194,7 @@
 	
 	function getMarkerOptions(properties) {
 		console.log(properties.insertedtime);
-		console.log(convertTime(mostRecent) - convertTime(properties.insertedtime);
+		console.log(convertTime(mostRecent) - convertTime(properties.insertedtime));
 		var fillColor = '#ff7800';
 		var color = '#000';
 		console.log(mostRecent);
