--- a/admin2/map.html
+++ b/admin2/map.html
@@ -200,7 +200,7 @@
 		var color = '#000';
 		console.log(mostRecent);
 		return {
-			radius: 5/Math.log(timeDiff/1000000),
+			radius: 5/(Math.log(timeDiff)/10),
 			fillColor: fillColor,
 			color: color,
 			weight: 1,
