--- a/admin2/tables.html
+++ b/admin2/tables.html
@@ -42,6 +42,7 @@
 </head>
 
     <!-- jQuery -->
+    <script src="/assets/lib/moment/moment.js"></script>
     <script src="/assets/lib/jquery/jquery-2.1.1.min.js"></script>
     <script src="/assets/lib/bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
 <body>
