--- a/admin2/map.html
+++ b/admin2/map.html
@@ -165,6 +165,7 @@
 				tempPoint.properties = {
 					'id' : data[i][0],
 					'insertedtime' : data[i][2],
+					'geom' : data[i][1],
 					'positiontime' : data[i][3]
 				}
 				
