--- a/admin2/map.html
+++ b/admin2/map.html
@@ -61,17 +61,6 @@
 		  <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
-                        <li class="sidebar-search">
-                            <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-                                <button class="btn btn-default" type="button">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </span>
-                            </div>
-                            <!-- /input-group -->
-                        </li>
                         <li>
                             <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
@@ -79,7 +68,13 @@
                             <a href="tables.html"><i class="fa fa-table fa-fw"></i> Raw data</a>
                         </li>
 						<li>
-                            <a class="active" href="map.html"><i class="fa fa-table fa-fw"></i> Raw data</a>
+                            <a class="active" href="map.html"><i class="fa fa-location-arrow fa-fw"></i> Map view</a>
+                        </li>
+                        <li>
+                            <a href="input.html"><i class="fa fa-edit fa-fw"></i> Add data</a>
+                        </li>
+                        <li>
+                            <a href="tables.html"><i class="fa fa-cogs fa-fw"></i> Settings</a>
                         </li>
                     </ul>
                 </div>
