--- a/admin2/input.html
+++ b/admin2/input.html
@@ -183,33 +183,23 @@
             </div>
             <!-- /.row -->
             <div class="row">
-               <div class="panel panel-default" >
-  <!-- Default panel contents -->
-  <div class="panel-heading">Position updates</div>
-
-  <!-- Table -->
-  <table class="table">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>Position</th>
-            <th>Timestamp</th>
-            <th>Age</th>
-          </tr>
-        </thead>
-        <tbody id="resbody">
-         
-        </tbody>
-      </table>
-</div>
-                <!-- /.col-lg-4 -->
-            </div>
-            <!-- /.row -->
+               <div class="col-lg-6">
+					<div class="panel panel-default" >
+						
+	 
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<div class="panel panel-default" >
+						<div id="map"></div>
+	 
+					</div>
+				</div>
 	
 			
 			
-        </div>
-        <!-- /#page-wrapper -->
+			</div>
+			<!-- /#page-wrapper -->
 
     </div>
     <!-- /#wrapper -->
