--- a/admin2/map.html
+++ b/admin2/map.html
@@ -74,7 +74,7 @@
                             <a href="input.html"><i class="fa fa-edit fa-fw"></i> Add data</a>
                         </li>
                         <li>
-                            <a href="tables.html"><i class="fa fa-cogs fa-fw"></i> Settings</a>
+                            <a href="settings.html"><i class="fa fa-cogs fa-fw"></i> Settings</a>
                         </li>
                     </ul>
                 </div>
