--- a/admin2/map.html
+++ b/admin2/map.html
@@ -83,7 +83,7 @@
  
  
         <div id="page-wrapper">
-            <div class="row">
+            <div class="row" id="toprow">
                 <div class="col-lg-12">
                     <h1 class="page-header">Raw data</h1>
                 </div>
@@ -135,10 +135,9 @@
         <!-- /#page-wrapper -->
 
     </div>
-    <!-- /#wrapper -->
-
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="/assets/lib/moment/moment.js"></script>
+    <script src="/assets/lib/jquery/jquery-2.1.1.min.js"></script>
+    <script src="/assets/lib/bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
@@ -159,10 +158,8 @@
 
 	
 	$(window).resize(function () {
-		var h = $(window).height(),
-			offsetTop = 55; // Calculate the top offset
-		var top = $("#top").height();
-		$("#map").css('height', $(window).height()-offsetTop);
+		var top = $("#toprow").height();
+		$("#map").css('height', $(window).height()-top);
 	}).resize();
 	
 	var geojson;
