--- a/admin2/map.html
+++ b/admin2/map.html
@@ -21,6 +21,8 @@
 	
 	
     <link href="/assets/lib/leaflet/leaflet.css" rel="stylesheet">
+    <link href="/assets/lib/bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    
 
 
     <!-- Custom CSS -->
