--- a/admin2/index.html
+++ b/admin2/index.html
@@ -42,7 +42,7 @@
 
     <div id="wrapper">
 
-        <!-- Navigation -->
+            <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -55,8 +55,8 @@
             </div>
             <!-- /.navbar-header -->
 
-           
-             <!-- /.navbar-top-links -->
+   
+            <!-- /.navbar-top-links -->
  
 		  	  <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
@@ -73,6 +73,9 @@
                         <li>
                             <a href="input.html"><i class="fa fa-edit fa-fw"></i> Add data</a>
                         </li>
+						<li>
+							<a href="edit.html"><i class="fa fa-edit fa-fw"></i> Edit tracks</a>
+						</li>
                         <li>
                             <a href="settings.html"><i class="fa fa-cogs fa-fw"></i> Settings</a>
                         </li>
@@ -80,13 +83,11 @@
                 </div>
                 <!-- /.sidebar-collapse -->
             </div>
-            <!-- /.navbar-static-side -->
-        </nav>
 
         <div id="page-wrapper">
             <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="page-header">Dashboard</h1>
+                  <div class="col-lg-12">
+                    <h3 class="page-header">Dashboard</h3>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
