--- a/new.html
+++ b/new.html
@@ -194,8 +194,7 @@ $('.navbar-collapse ul li a').click(function() {
 		if($(window).width()>767) {
 			$("#map").css('height', $(window).height()*0.85-offsetTop);
 			$("#trackdiv").css('height', $(window).height()*0.85-offsetTop);
-			$("#tracks").css('padding-top', $(window).height()*0.075+offsetTop);
-			$("#tracks").css('padding-bottom', $(window).height()*0.075);
+			$("#tracks")css('height', $(window).height()*0.85-offsetTop);
 		} else {
 			$("#map").css('height', $(window).height()*0.6-offsetTop);
 			$("#trackdiv").css('height', '100%');
