--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@ $('.navbar-collapse ul li a').click(function() {
 		if($(window).width()>767) {
 			$("#map").css('height', $(window).height()*0.85-offsetTop);
 			$("#trackdiv").css('height', $(window).height()*0.85-offsetTop);
+			$("#tracks").css('height', $(window).height());
 			$("#tracks").css('padding-top', $(window).height()*0.075+offsetTop);
 			$("#tracks").css('padding-bottom', $(window).height()*0.075);
 		} else {
