admin add point

--- a/admin2/index.html
+++ b/admin2/index.html
@@ -98,11 +98,11 @@
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
-                                    <i class="fa fa-comments fa-5x"></i>
+                                    <i class="fa fa-clock-o fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
                                     <div class="huge">26</div>
-                                    <div>New Comments!</div>
+                                    <div>Sist oppdatering</div>
                                 </div>
                             </div>
                         </div>
