--- a/admin2/index.html
+++ b/admin2/index.html
@@ -11,9 +11,8 @@
 
     <title>SB Admin 2 - Bootstrap Admin Theme</title>
 
-    <!-- Bootstrap Core CSS -->
+    <link href="/assets/lib/leaflet/leaflet.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
     <!-- MetisMenu CSS -->
     <link href="css/plugins/metisMenu/metisMenu.min.css" rel="stylesheet">
 
@@ -160,11 +159,11 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <div class="panel panel-red">
+                    <div class="panel panel-green">
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
-                                    <i class="fa fa-support fa-5x"></i>
+                                    <i class="fa fa-dot-circle-o fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
                                     <div class="huge">13</div>
@@ -183,27 +182,13 @@
                 </div>
             </div>
             <!-- /.row -->
-            <div class="row">
-               <div class="panel panel-default" >
-  <!-- Default panel contents -->
-  <div class="panel-heading">Position updates</div>
-
-  <!-- Table -->
-  <table class="table">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>Position</th>
-            <th>Timestamp</th>
-            <th>Age</th>
-          </tr>
-        </thead>
-        <tbody id="resbody">
-         
-        </tbody>
-      </table>
-</div>
-                <!-- /.col-lg-4 -->
+			
+			
+               
+            <div class="row" id="tracks">
+				 <div class="col-lg-12">
+					<div id="map"></div>
+                </div>
             </div>
             <!-- /.row -->
 	
@@ -232,6 +217,44 @@
     <!-- Custom Theme JavaScript -->
     <script src="js/sb-admin-2.js"></script>
 
+    <script src="/assets/lib/leaflet/leaflet.js"></script>
+	
+    <script src="../js/langeland/statusBar.js"></script>
+    <script src="../js/langeland/TemporalColor.js"></script>	
+    <script src="../js/langeland/langeland.js"></script>
+    <script src="../js/langeland/TimeModule.js"></script>
+	
+	<script>
+	
+	
+
+	$(window).resize(function () {
+		var h = $(window).height(),
+			offsetTop = 55; // Calculate the top offset
+		var top = $("#top").height();
+			$("#map").css('height', $(window).height()*0.85-offsetTop);
+			$("#tracks").css('height', $(window).height());
+			$("#tracks").css('padding-top', $(window).height()*0.075+offsetTop);
+			$("#tracks").css('padding-bottom', $(window).height()*0.075);
+		
+	}).resize();
+	
+	
+	LS = LS || {};
+	LS.temporalColor.init();
+	LS.app.init('#map', LS.temporalColor);
+	
+	
+
+	$.getJSON('/datapi/langeland/spatiotemporal', function (data) {
+	var time = new Date();
+		LS.app.addSegments(JSON.parse(data));
+		console.log(new Date() - time);
+		loadTrackData();
+	});
+	
+	
+	</script>
 </body>
 
 </html>
