--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ $('.navbar-collapse ul li a').click(function() {
 			offsetTop = 51; // Calculate the top offset
 		var top = $("#top").height();
 			$("#map").css('height', $(window).height()-offsetTop);
-			$("#map").css('trackdiv', $(window).height()-offsetTop);
+			$("#trackinfo-container").css('height', $(window).height()-offsetTop);
 	}).resize();
 	
 	
