--- a/index.html
+++ b/index.html
@@ -99,9 +99,12 @@
                 </div>
                  <a class="col-md-8 lang-home-container">
                     <div id="lang-info" class="lang-home-box">
+                        
                         <h3>Info</h3>
+                        <div id="info-body">
                         <h2>Nye nettsider</h2>
                         <p>Vi er i ferd med å få opp nye nettsider for Langeland. Dette inkluderer også kontinuerlige løypeoppdateringar. Det er viktig å understreke at dette er i ein testfase, så det kan forekome feil. Har du sett feil eller manglar kan du sende </p>
+                        </div>
                     
                     </div>
 				</a>
