--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="text-vertical-center">
 			<div id="home-info" class="col-lg-8 col-lg-offset-2 text-center">
                 <div class="col-lg-4 lang-left-container">
-				<a class=" lang-home-container" href="#tracks">
+				<a id="go-to-tracks" class="lang-home-container" href="#tracks">
                     <div id="lang-tracks" class="lang-home-box">
                         <h3>Løypestatus</h3>
                         <div id="lang-track-status"></div>
@@ -208,6 +208,7 @@ $(function() {
         }, 500, 'easeInOutExpo');
         event.preventDefault();
     });
+    
 });
 
 // Closes the Responsive Menu on Menu Item Click
