cleaning, minor fixes

--- a/index.html
+++ b/index.html
@@ -6,30 +6,26 @@
 	
     <title>Langeland</title>
 
-    <link href="/assets/lib/leaflet/leaflet.css" rel="stylesheet">
-    <link href="/assets/lib/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="js/vendor/leaflet/leaflet.css" rel="stylesheet">
+    <link href="js/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="css/stylish-portfolio.css" rel="stylesheet">
-    <link href="css/newlangeland.css" rel="stylesheet">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	
     <link href="css/langeland.css" rel="stylesheet">
 
 
   </head>
 <body>
 
-    <script src="/assets/lib/jquery/jquery-2.1.1.min.js"></script>
-    <script src="/assets/lib/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/assets/lib/leaflet/leaflet.js"></script>
+    <script src="js/vendor/jquery-2.1.3.min.js"></script>
+    <script src="js/vendor/jquery.easing.1.3.js"></script>
+    <script src="js/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/vendor/leaflet/leaflet.js"></script>
 	
     <script src="js/langeland/statusBar.js"></script>
     <script src="js/langeland/TemporalColor.js"></script>	
     <script src="js/langeland/langeland.js"></script>
     <script src="js/langeland/TimeModule.js"></script>
 	
-    <script src="/assets/lib/jquery/jquery.easing.min.js"></script>
-
-
 	
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
@@ -147,7 +143,7 @@
 	
  <section id="camera">
 			<div class="text-vertical-center">
-            <div class=" col-lg-8">
+            <div class="col-lg-8 col-lg-offset-2">
                 <div class="lang-web-cam">
                     <img src="http://37.44.172.66/axis-cgi/jpg/image.cgi?resolution=640x480" class="img-responsive"></img>
                 </div>
@@ -157,17 +153,16 @@
 	
 	
 	<section id="contact">
-        <div class="col-lg-8 col-lg-offset-2">
+        <div id="contact-info" class="col-lg-8 col-lg-offset-2">
                 <h3>Kontaktinfo</h3>
-                <p>Telefon: <a href="tel:+4791312250">91312250</a></p>
-                <p>Epost: <a href="mailto:feedback@startbootstrap.com">kontakt@langelandskisetner.no</a> </p>
-                <p>Langeland Skisenter kan også finnast her:</p>
+                <p>Du kan kome i kontakt med oss ved å sende ei melding på Facebook.</p>
+                <p>Vi har også ei side hjå Google:</p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://facebook.com/langelandskisenter" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                        <a href="https://facebook.com/langelandskisenter" target="_blank" class="btn btn-default btn-md social-button"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/111515455378621337089/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                        <a href="https://plus.google.com/111515455378621337089/" target="_blank" class="btn btn-default  btn-md social-button"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
                     </li>
                 </ul>
 		</div>
