--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
 var latitude = 61.3999272955946;
 var longitude = 5.76203078840252;
-var url = "http://www.langelandskisenter.no/langeland/data";
+var url = "http://www.langelandskisenter.no/data";
 function getWeather() {
 
     $.ajax({
