--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                     <li>
                         <a class="page-scroll" href="#camera">Kamera</a>
                     </li> 
+                    <li>
+                        <a class="page-scroll" href="#about">Om</a>
+                    </li> 
 					<li>
 						<a class="page-scroll" href="#contact">Kontakt</a>
                     </li>
@@ -152,6 +155,14 @@
  </section>
 	
 	
+ <section id="about">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h1>Om Langeland Skisenter</h1>
+                <p class="lead">Skisenteret blir drive i aksjeselskapet Langeland Ski- og fritidssenter AS, og selskapet er eigd av Førde IL og Gaular IL, med 50% på kvar.  Alle inntekter som skisenteret skaffar seg går til drift og utvikling av anlegget. Det ligg ein vesentleg dugnadsinnsats bak drifta av anlegget, av frivillege i skimiljøet i Førde og Gaular. Styret for skisenteret er samansett av Kjetil Bjørset (leiar), Thomas Haugsbø (nestleiar), Ole-Jakob Sande, Magnar Arild Kapstad, Børge Klakegg og Jan Nikolai Hvidsten. Driftsleiar er Magne Øvrebø.</p>
+                
+                </div>
+ </section>
+    
 	<section id="contact">
         <div id="contact-info" class="col-lg-8 col-lg-offset-2">
                 <h3>Kontaktinfo</h3>
