--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
 
 var latitude = 61.3999272955946;
 var longitude = 5.76203078840252;
-var url = "";
+
+var url = config.url;
+
 function getWeather() {
 
     $.ajax({
