--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="js/langeland/TemporalColor.js"></script>	
     <script src="js/langeland/langeland.js"></script>
     <script src="js/langeland/TimeModule.js"></script>
+    <script src="config.js"></script>
 	
 	
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
