--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="js/langeland/TemporalColor.js"></script>	
     <script src="js/langeland/langeland.js"></script>
     <script src="js/langeland/TimeModule.js"></script>
-    <script src="config.js"></script>
+  
 	
 	
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
@@ -187,7 +187,7 @@
 var latitude = 61.3999272955946;
 var longitude = 5.76203078840252;
 
-var url = config.url;
+var url = '/';
 
 function getWeather() {
 
